src/objects/ShowpadForSF__Showpad_Content__c.object
<CustomObject>
    <description>Content available in Showpad.</description>
    <fields>
        <fullName>ShowpadForSF__Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>audio</fullName>
                </value>
                <value>
                    <fullName>document</fullName>
                </value>
                <value>
                    <fullName>html content</fullName>
                </value>
                <value>
                    <fullName>photo</fullName>
                </value>
                <value>
                    <fullName>video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowpadForSF__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Showpad_ID__c</fullName>
        <externalId>true</externalId>
        <label>Showpad ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Showpad Content</label>
    <listViews>
        <fullName>ShowpadForSF__All</fullName>
        <columns>NAME</columns>
        <columns>ShowpadForSF__Showpad_ID__c</columns>
        <columns>ShowpadForSF__Content_Type__c</columns>
        <columns>ShowpadForSF__File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Showpad Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Showpad Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>